--- a/WishlistApi/appsettings.json
+++ b/WishlistApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=wishlistdb;Username=postgres;Password=xxx"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=wishlistdb;Username=postgres;"
   }
 }
