implemented JWT auth, user validation and wishlist/product controller updates

--- a/WishlistApi/appsettings.json
+++ b/WishlistApi/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=wishlistdb;Username=postgres;"
+  },
+  "Jwt": {
+    "Issuer": "WishlistApi",
+    "Audience": "WishlistFrontend",
+    "ExpiresInHours": "24"
   }
 }
